Improve find , add & push methods. Add remove, attr, hasOne and hasMany methods.
- Add eslintrc files.
- Improve README.
- Improve test setup.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "lib/store.js",
   "scripts": {
-    "test": "jasmine"
+    "test": "node_modules/jasmine/bin/jasmine.js"
   },
   "author": "",
   "license": "MIT",
