Improve inverse relationships. Add dependents. Make remove clean relationships.

--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -4,6 +4,7 @@
   },
   "ecmaFeatures": {
     "arrowFunctions": true,
+    "blockBindings": true,
     "classes": true,
     "modules": true,
     "templateStrings": true
