--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -56,6 +56,7 @@
     "no-with": 2,
     "radix": 2,
     "semi": 2,
+    "valid-jsdoc": 1,
     "vars-on-top": 2,
     "wrap-iife": 2,
     "yoda": 2
