Update the NPM package information.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "json-api-store",
   "version": "0.1.0",
-  "description": "",
+  "description": "A lightweight library for using JSON API in the browser.",
   "main": "lib/store.js",
   "scripts": {
     "test": "node_modules/jasmine/bin/jasmine.js"
   },
-  "author": "",
+  "author": "Haydn Ewers",
   "license": "MIT",
   "devDependencies": {
     "babel": "^5.8.21",
