--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "babel": "^5.8.21",
     "jasmine": "^2.3.2"
+  },
+  "dependencies": {
+    "array.prototype.find": "^1.0.0"
   }
 }
