--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "json-api-store",
   "version": "0.2.0",
   "description": "A lightweight library for using JSON API in the browser.",
+  "repository": "haydn/json-api-store",
   "main": "dist/store.js",
   "scripts": {
     "test": "node_modules/jasmine/bin/jasmine.js"
