--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -15,11 +15,11 @@
     "consistent-return": 2,
     "curly": 2,
     "default-case": 2,
-    "dot-notation": 2,
     "eqeqeq": 2,
     "guard-for-in": 2,
     "no-alert": 2,
     "no-caller": 2,
+    "no-console": 1,
     "no-div-regex": 2,
     "no-else-return": 0,
     "no-empty-label": 2,
