--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -51,6 +51,7 @@
     "no-sequences": 2,
     "no-undef": 2,
     "no-unused-expressions": 2,
+    "no-unused-vars": 2,
     "no-void": 2,
     "no-warning-comments": 1,
     "no-with": 2,
