--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sinon": "^1.16.1",
     "tap-spec": "^4.1.0",
     "tape": "^4.2.0",
+    "tape-catch": "^1.0.4",
     "tape-run": "^1.1.0"
   },
   "dependencies": {
