--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "browserify": "^11.0.1",
     "chokidar-cli": "^1.0.1",
     "esdoc": "^0.2.2",
+    "faucet": "0.0.1",
     "sinon": "^1.16.1",
-    "tap-spec": "^4.1.0",
     "tape": "^4.2.0",
     "tape-catch": "^1.0.4",
     "tape-run": "^1.1.0"
