--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "browserify": "^11.0.1",
     "chokidar-cli": "^1.0.1",
     "esdoc": "^0.2.2",
+    "eslint": "^1.3.1",
     "faucet": "0.0.1",
     "sinon": "^1.16.1",
     "tape": "^4.2.0",
