--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "uglifyify": "^3.0.1"
   },
   "dependencies": {
-    "array.prototype.find": "^1.0.0"
+    "array.prototype.find": "^1.0.0",
+    "rx-lite": "^3.1.2"
   }
 }
