--- a/scripts/build
+++ b/scripts/build
@@ -2,6 +2,7 @@
 
 # Node
 ./node_modules/.bin/babel src/store.js -m common --module-id Store -o dist/store.js
+./node_modules/.bin/babel src/ajax.js -m common --module-id ajax -o dist/ajax.js
 ./node_modules/.bin/babel src/ajax-adapter.js -m common --module-id AjaxAdapter -o dist/ajax-adapter.js
 
 # Browser (Development)
